--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-<title>Virtual Wings – Pilot Pad</title>
+<title>Virtual Wings Pilot Pad</title>
 
 <style>
 body {
     margin:0;
-    background:#0b0f17;
+    background:#0d0f14;
     color:#00ff88;
     font-family:Arial, sans-serif;
 }
@@ -18,7 +18,7 @@ header {
     padding:15px;
     font-size:22px;
     font-weight:bold;
-    background:#121826;
+    background:#121722;
     letter-spacing:1px;
 }
 
@@ -30,7 +30,7 @@ header {
 }
 
 input {
-    background:#1a2233;
+    background:#1a1f2b;
     border:1px solid #00ff88;
     color:#00ff88;
     padding:8px;
@@ -57,7 +57,6 @@ button {
     margin:5px;
     font-weight:bold;
     border-radius:6px;
-    cursor:pointer;
 }
 </style>
 </head>
@@ -113,7 +112,6 @@ canvas.addEventListener('pointermove', e => {
 });
 
 canvas.addEventListener('pointerup', () => drawing = false);
-canvas.addEventListener('pointercancel', () => drawing = false);
 
 function clearPad() {
     ctx.clearRect(0, 0, canvas.width, canvas.height);
@@ -132,7 +130,7 @@ function saveData() {
         drawing: canvas.toDataURL()
     };
     localStorage.setItem("vwFlight", JSON.stringify(data));
-    alert("Flight Saved Successfully ✈️");
+    alert("Flight Saved");
 }
 
 function loadData() {
@@ -166,3 +164,5 @@ loadData();
 
 </body>
 </html>
+
+
