--- a/index.html
+++ b/index.html
@@ -3,166 +3,286 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-<title>Virtual Wings Pilot Pad</title>
+
+<title>Virtual Wings – A320 Pilot Pad</title>
+
+<link rel="manifest" href="manifest.json">
+<meta name="theme-color" content="#161a1f">
+
+<!-- jsPDF -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
 
 <style>
 body {
-    margin:0;
-    background:#0d0f14;
-    color:#00ff88;
-    font-family:Arial, sans-serif;
+  margin: 0;
+  font-family: "Segoe UI", Arial, sans-serif;
+  background: #161a1f;
+  color: #e5e7eb;
 }
 
-header {
-    text-align:center;
-    padding:15px;
-    font-size:22px;
-    font-weight:bold;
-    background:#121722;
-    letter-spacing:1px;
+/* TOP BAR */
+.topbar {
+  background: #0f172a;
+  padding: 10px 20px;
+  display: flex;
+  justify-content: space-between;
+  font-size: 14px;
+  font-weight: 600;
+  border-bottom: 2px solid #00ffcc;
+  box-shadow: 0 0 10px #00ffcc;
 }
 
-.form-section {
-    display:grid;
-    grid-template-columns: repeat(auto-fit, minmax(140px,1fr));
-    gap:8px;
-    padding:15px;
+/* HEADER */
+.header {
+  background: #111827;
+  padding: 16px;
+  text-align: center;
+  font-size: 18px;
+  font-weight: 700;
+  letter-spacing: 2px;
+  border-bottom: 2px solid #00ffcc;
+  box-shadow: 0 0 12px #00ffcc;
 }
 
+/* LAYOUT */
+.container {
+  padding: 20px;
+  display: grid;
+  gap: 20px;
+}
+
+/* PANEL */
+.panel {
+  background: #020617;
+  padding: 20px;
+  border-radius: 8px;
+  border: 2px solid #00ffcc;
+  box-shadow: 0 0 15px rgba(0,255,204,0.35);
+}
+
+/* PANEL TITLE */
+.panel-title {
+  font-size: 14px;
+  font-weight: 700;
+  color: #00ffcc;
+  margin-bottom: 15px;
+  border-bottom: 1px solid #00ffcc;
+  padding-bottom: 6px;
+  letter-spacing: 1px;
+}
+
+/* INPUT */
 input {
-    background:#1a1f2b;
-    border:1px solid #00ff88;
-    color:#00ff88;
-    padding:8px;
-    border-radius:6px;
+  width: 100%;
+  background: #000000;
+  border: 2px solid #00ffcc;
+  color: #ffffff;
+  padding: 12px;
+  margin-bottom: 12px;
+  font-size: 14px;
+  font-weight: 600;
+  border-radius: 4px;
+  box-sizing: border-box;
+  outline: none;
 }
 
+input::placeholder {
+  color: #9ca3af;
+}
+
+/* CANVAS */
 canvas {
-    background:white;
-    display:block;
-    margin:0 auto;
-    border-radius:12px;
-    touch-action:none;
+  width: 100%;
+  height: 340px;
+  background: white;
+  border: 2px solid #00ffcc;
+  box-shadow: 0 0 10px rgba(0,255,204,0.4);
+  touch-action: none;
 }
 
-.controls {
-    text-align:center;
-    padding:15px;
+/* BUTTONS */
+.button-bar {
+  text-align: center;
+  padding: 10px;
 }
 
 button {
-    background:#00ff88;
-    border:none;
-    padding:10px 15px;
-    margin:5px;
-    font-weight:bold;
-    border-radius:6px;
+  background: black;
+  border: 2px solid #00ffcc;
+  color: #00ffcc;
+  padding: 10px 24px;
+  margin: 6px;
+  font-size: 14px;
+  font-weight: 700;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+button:hover {
+  background: #00ffcc;
+  color: black;
 }
 </style>
 </head>
+
 <body>
 
-<header>✈️ VIRTUAL WINGS – PILOT PAD</header>
-
-<div class="form-section">
-<input id="callsign" placeholder="Callsign">
-<input id="dep" placeholder="Departure">
-<input id="arr" placeholder="Arrival">
-<input id="squawk" placeholder="Squawk">
-<input id="qnh" placeholder="QNH">
-<input id="rwy" placeholder="Runway">
-<input id="sid" placeholder="SID">
-<input id="climb" placeholder="Initial Climb">
+<div class="topbar">
+  <div>UTC <span id="utcTime"></span></div>
+  <div>VIRTUAL WINGS EFB</div>
+  <div>BAT 100%</div>
 </div>
 
-<canvas id="pad"></canvas>
+<div class="header">
+  A320 PILOT PAD
+</div>
 
-<div class="controls">
-<button onclick="clearPad()">Clear</button>
-<button onclick="saveData()">Save</button>
-<button onclick="exportPDF()">Export PDF</button>
+<div class="container">
+
+  <div class="panel">
+    <div class="panel-title">SIMBRIEF IMPORT</div>
+    <input id="simbriefID" placeholder="SIMBRIEF USER ID">
+    <button onclick="loadSimBrief()">IMPORT OFP</button>
+  </div>
+
+  <div class="panel">
+    <div class="panel-title">FLIGHT DATA</div>
+
+    <input id="callsign" placeholder="CALLSIGN">
+    <input id="dep" placeholder="DEPARTURE ICAO">
+    <input id="arr" placeholder="ARRIVAL ICAO">
+    <input id="runway" placeholder="RUNWAY">
+    <input id="sid" placeholder="SID">
+    <input id="route" placeholder="ROUTE">
+    <input id="fl" placeholder="CRUISE FL">
+    <input id="squawk" placeholder="SQUAWK">
+    <input id="qnh" placeholder="QNH">
+
+  </div>
+
+  <div class="panel">
+    <div class="panel-title">NOTES / KNEEBOARD</div>
+    <canvas id="pad"></canvas>
+  </div>
+
+</div>
+
+<div class="button-bar">
+  <button onclick="clearPad()">CLEAR</button>
+  <button onclick="saveDrawing()">SAVE</button>
+  <button onclick="exportPDF()">EXPORT PDF</button>
 </div>
 
 <script>
-const canvas = document.getElementById('pad');
-const ctx = canvas.getContext('2d');
+/* UTC CLOCK */
+function updateUTC() {
+  const now = new Date();
+  document.getElementById("utcTime").innerText =
+    now.getUTCHours().toString().padStart(2,'0') + ":" +
+    now.getUTCMinutes().toString().padStart(2,'0');
+}
+setInterval(updateUTC, 1000);
+updateUTC();
+
+/* CANVAS */
+const canvas = document.getElementById("pad");
+const ctx = canvas.getContext("2d");
 
 function resizeCanvas() {
-    canvas.width = window.innerWidth - 40;
-    canvas.height = window.innerHeight * 0.5;
+  canvas.width = canvas.offsetWidth;
+  canvas.height = 340;
 }
 resizeCanvas();
-window.addEventListener('resize', resizeCanvas);
+window.addEventListener("resize", resizeCanvas);
 
 let drawing = false;
 
-canvas.addEventListener('pointerdown', e => {
-    drawing = true;
-    ctx.beginPath();
-    ctx.moveTo(e.offsetX, e.offsetY);
+canvas.addEventListener("pointerdown", e => {
+  drawing = true;
+  ctx.beginPath();
+  ctx.moveTo(e.offsetX, e.offsetY);
 });
 
-canvas.addEventListener('pointermove', e => {
-    if (!drawing) return;
-    ctx.lineWidth = 2;
-    ctx.lineCap = "round";
-    ctx.strokeStyle = "black";
-    ctx.lineTo(e.offsetX, e.offsetY);
-    ctx.stroke();
+canvas.addEventListener("pointermove", e => {
+  if (!drawing) return;
+  ctx.lineWidth = 2.2;
+  ctx.lineCap = "round";
+  ctx.strokeStyle = "black";
+  ctx.lineTo(e.offsetX, e.offsetY);
+  ctx.stroke();
 });
 
-canvas.addEventListener('pointerup', () => drawing = false);
+canvas.addEventListener("pointerup", () => drawing = false);
+canvas.addEventListener("pointerleave", () => drawing = false);
 
 function clearPad() {
-    ctx.clearRect(0, 0, canvas.width, canvas.height);
+  ctx.clearRect(0,0,canvas.width,canvas.height);
 }
 
-function saveData() {
-    const data = {
-        callsign: callsign.value,
-        dep: dep.value,
-        arr: arr.value,
-        squawk: squawk.value,
-        qnh: qnh.value,
-        rwy: rwy.value,
-        sid: sid.value,
-        climb: climb.value,
-        drawing: canvas.toDataURL()
-    };
-    localStorage.setItem("vwFlight", JSON.stringify(data));
-    alert("Flight Saved");
+function saveDrawing() {
+  localStorage.setItem("vwNotes", canvas.toDataURL());
+  alert("NOTES SAVED");
 }
 
-function loadData() {
-    const saved = localStorage.getItem("vwFlight");
-    if (!saved) return;
-    const data = JSON.parse(saved);
-
-    callsign.value = data.callsign;
-    dep.value = data.dep;
-    arr.value = data.arr;
-    squawk.value = data.squawk;
-    qnh.value = data.qnh;
-    rwy.value = data.rwy;
-    sid.value = data.sid;
-    climb.value = data.climb;
-
-    const img = new Image();
-    img.src = data.drawing;
-    img.onload = () => ctx.drawImage(img, 0, 0);
+function loadDrawing() {
+  const saved = localStorage.getItem("vwNotes");
+  if (!saved) return;
+  const img = new Image();
+  img.src = saved;
+  img.onload = () => ctx.drawImage(img,0,0);
 }
+loadDrawing();
 
+/* PDF EXPORT */
 function exportPDF() {
-    const link = document.createElement('a');
-    link.download = "virtual_wings_flight.png";
-    link.href = canvas.toDataURL();
-    link.click();
+  const { jsPDF } = window.jspdf;
+  const pdf = new jsPDF();
+
+  const callsign = document.getElementById("callsign").value || "-";
+  const route = document.getElementById("route").value || "-";
+
+  pdf.setFontSize(16);
+  pdf.text("VIRTUAL WINGS PILOT PAD", 20, 20);
+  pdf.text("CALLSIGN: " + callsign, 20, 35);
+  pdf.text("ROUTE: " + route, 20, 50);
+
+  const imgData = canvas.toDataURL("image/png");
+  pdf.addImage(imgData, "PNG", 15, 60, 180, 100);
+
+  pdf.save("virtual-wings-notes.pdf");
 }
 
-loadData();
+/* SIMBRIEF */
+async function loadSimBrief() {
+  const id = document.getElementById("simbriefID").value;
+
+  if (!id) {
+    alert("SIMBRIEF ID GİR");
+    return;
+  }
+
+  try {
+    const url = `https://www.simbrief.com/api/xml.fetcher.php?userid=${id}&json=1`;
+    const response = await fetch(url);
+    const data = await response.json();
+
+    document.getElementById("callsign").value = data.general.callsign || "";
+    document.getElementById("route").value = data.general.route || "";
+    document.getElementById("dep").value = data.origin.icao_code || "";
+    document.getElementById("arr").value = data.destination.icao_code || "";
+    document.getElementById("fl").value = "FL" + data.general.initial_altitude || "";
+
+    alert("OFP IMPORTED ✈️");
+
+  } catch (err) {
+    alert("SimBrief bağlantı hatası");
+    console.error(err);
+  }
+}
+
+/* SERVICE WORKER */
+if ("serviceWorker" in navigator) {
+  navigator.serviceWorker.register("sw.js");
+}
 </script>
-
-</body>
-</html>
-
 
